# rust-webapp

./: Dockerfile  README.md  entrypoint.sh
.devcontainer/: Dockerfile
.github/workflows/: deploy.md
server/: Cargo.toml
server/src/: chat_server.rs  commands.rs  handlers.rs  main.rs  structs.rs  ws.rs
wasm-client/: .gitignore  Cargo.toml  README.md  index.html
wasm-client/src/: error_pages.rs  lib.rs
wasm-client/src/templates/: about.rs  index.rs  mod.rs  ws.rs
